# Flibusta-bot

./: CMakeLists.txt  README.md  compile_commands.json
Bot/: bot.cpp
Parser/: parser.cpp  parser.h
